[tool.poetry]
name = "\"chat-bot-with-stable-diffusion\""
version = "0.1.0"
description = "\"this project include chatbot as well as stable diffusion\""
authors = ["Darshan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
llama-index = "^0.10.25"
langchain = "^0.1.13"
keras = "^3.1.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
speechrecognition = "^3.10.3"
pyaudio = "^0.2.14"
pyttsx3 = "^2.90"
moviepy = "^1.0.3"
opencv-python = "^4.9.0.80"
seaborn = "^0.13.2"
mysql-connector-python = "^8.3.0"
pymongo = "^4.6.3"
mlflow = "^2.11.3"
boto3 = "^1.34.74"
azure-storage-blob = "^12.19.1"
datetime = "^5.5"
librosa = "^0.10.1"
beautifulsoup4 = "^4.12.3"
openai = "^1.16.1"
ml-dtypes = "0.3.2"
websocket = "^0.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
unicorn-binance-websocket-api = "^2.4.0"
unicorn-fy = "^0.14.2"
uvicorn = "^0.29.0"
fastapi = "^0.111.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
